--- a/frontend/src/pages/tasks.css
+++ b/frontend/src/pages/tasks.css
@@ -414,14 +414,14 @@
 .task-item {
   display: flex;
   justify-content: space-between;
-  align-items: center;
+  align-items: flex-start;
   background-color: var(--color-surface);
   border-radius: 12px;
   padding: 14px 16px 14px 6px;
   color: var(--color-text-primary);
   border: 0.5px solid var(--color-border);
   box-sizing: border-box;
-  transition: background-color 0.2s ease-in-out;
+  transition: background-color 0.2s ease-in-out, height 0.25s ease-in-out;
   overflow: visible;
   position: relative;
   box-shadow: inset 0 2px 3px rgba(255, 255, 255, 0.025);
@@ -451,14 +451,15 @@
   border: 1px solid var(--color-border-2) !important;
   background: hsla(0, 0%, 100%, 0.103) !important;
   border-radius: 8px !important;
-  backdrop-filter: blur(1px);
+  backdrop-filter: blur(3px);
 }
 
 .task-item-left {
   display: flex;
   justify-content: center;
-  align-items: center;
+margin-top: 0.5px;
   gap: 10px;
+  position: relative;
 }
 
 .drag-handle-icon {
@@ -474,7 +475,7 @@
   height: 17px;
   border-radius: 4px;
   background-color: var(--color-border);
-  margin-top: 2px;
+  margin-top: 3px;
   cursor: pointer;
   transition: all 0.3s ease-in-out;
 
@@ -523,10 +524,22 @@
 }
 
 .task-title {
+  display: flex;
   font-size: 16px;
   font-weight: 500;
   letter-spacing: 0.1px;
   text-align: left;
+  max-width: 360px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  margin-right: 16px;
+}
+
+.task-item:hover .task-title {
+  max-width: none;
+  overflow: visible;
+  white-space: normal;
 }
 
 .task-item-right {
@@ -592,6 +605,21 @@
   position: relative;
 }
 
+.task-dots-container:hover {
+  background: var(--color-surface-3);
+}
+
+.task-dots {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 16px;
+  height: 16px;
+  opacity: 1;
+
+  margin-left: 0;
+}
+
 .task-dots-dropdown {
   position: absolute;
   top: calc(100% + 14px);
@@ -643,20 +671,7 @@
   background: var(--color-surface-3);
 }
 
-.task-dots-container:hover {
-  background: var(--color-surface-3);
-}
 
-.task-dots {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 16px;
-  height: 16px;
-  opacity: 1;
-
-  margin-left: 0;
-}
 
 .task-time {
   font-size: 14px;
