--- a/frontend/src/pages/tasks.css
+++ b/frontend/src/pages/tasks.css
@@ -93,10 +93,154 @@
   color: var(--color-text-primary);
 }
 
-.dots-icon svg {
+.header-dots-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 28px;
+  height: 28px;
+  border-radius: 8px;
+  transition: background 0.2s;
+  background: transparent;
+  cursor: pointer;
+  position: relative;
+}
+
+.header-dots-container:hover {
+  background: var(--color-surface-3);
+}
+
+.header-dots {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 20px;
+  height: 20px;
+  opacity: 1;
+}
+
+.header-dots svg {
   color: var(--color-text-secondary);
   width: 20px;
+}
+
+.header-dots-dropdown {
+  position: absolute;
+  top: calc(100% + 10px);
+  right: 0;
+  width: 260px;
+  background: var(--color-surface-2);
+  border: 0.5px solid var(--color-border);
+  box-shadow: 0 12px 30px rgba(2, 8, 23, 0.247),
+    0 4px 10px rgba(2, 8, 23, 0.651);
+  border-radius: 12px;
+  padding: 14px;
+  z-index: 99999;
+  overflow: hidden;
+  transform-origin: top right;
+  will-change: transform, opacity;
+}
+
+.dots-option.header {
+  height: 34px;
+  font-weight: 550;
+  letter-spacing: 0.2px;
+}
+
+.dots-option-icon.header {
+  width: 16px;
+  height: 16px;
+  color: var(--color-text-primary);
+}
+
+.dots-option-icon.header.twitter {
+  color: #1d9bf0;
+}
+
+.dots-option.tasks {
+  background-color: var(--color-surface-3);
+
+}
+
+.dots-option.tasks:hover {
+  background-color: var(--color-border-2);
+}
+
+.dropdown-section-title {
+  font-size: 12px;
+  font-weight: 400;
+  text-align: left;
+  color: var(--color-text-secondary);
+  padding: 8px 8px 8px 0px;
+  font-family: "Switzer", sans-serif;
+}
+
+.dropdown-section-title.theme {
+  padding: 0px 0px 4px 0px;
+}
+
+.dropdown-divider {
+  height: 0.5px;
+  background-color: var(--color-border);
+  margin: 6px 0;
+  border-radius: 2px;
+}
+
+.theme-options-row {
+  display: flex;
+  flex-direction: row;
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.18);
+  margin-bottom: 8px;
+  background: var(--color-surface-3);
+
+  border-radius: 20px;
+}
+
+.theme-option {
+  flex: 1;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  padding: 11px 12px;
+  background: transparent;
+  border: none;
+  color: var(--color-text-primary);
+  font-size: 13px;
+  font-weight: 500;
+  border-radius: 50px;
   cursor: pointer;
+  transition: background 0.2s;
+  font-family: "Switzer", sans-serif;
+  position: relative;
+  isolation: isolate;
+}
+
+.theme-option:hover {
+  background: var(--color-border);
+}
+
+.theme-selection-bg {
+  position: absolute;
+  inset: 0;
+  background: var(--color-border-2);
+  box-shadow: inset 0 2px 2px 0px var(--color-border-3);
+  border-radius: 50px;
+  z-index: -1;
+}
+
+.theme-option-content {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 8px;
+  z-index: 2;
+}
+
+.theme-option-icon {
+  width: 16px;
+  height: 16px;
+  color: var(--color-text-primary);
 }
 
 .task-add-input {
@@ -656,6 +800,7 @@ margin-top: 0.5px;
   font-family: "Switzer", sans-serif;
   letter-spacing: 0.1px;
 }
+
 
 .dots-option-icon {
   width: 18px;
