--- a/frontend/src/pages/privacy-policy.css
+++ b/frontend/src/pages/privacy-policy.css
@@ -5,12 +5,41 @@
     line-height: 1.5;
     color: var(--color-text-primary);
     display: flex;
-    flex-direction: column;
-    align-items: left;
-    justify-content: left;
-        padding: 90px 0 0 180px;
-        max-width: 820px;
-        
+    flex-direction:column;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    margin: 0;
+    padding: 0;
+}
+
+.privacy-policy-content {
+    padding: 90px 0 0 90px;
+    max-width: 820px;
+}
+
+.privacy-policy-defending-container {
+    position: fixed;
+    right: 180px;
+
+}
+
+.privacy-policy-defending {
+    width: 400px;
+    opacity: 1;
+}
+
+@media (max-width: 1600px) {
+    .privacy-policy-defending-container {
+        right: 120px;
+    }
+    
+}
+
+@media (max-width: 1450px) {
+    .privacy-policy-defending-container {
+        right: 40px;
+    }
+    
 }
 
 .privacy-policy-title {
@@ -51,6 +80,8 @@
     color: var(--color-text-secondary);
     font-weight: 400;
     margin-bottom: 16px;
+    min-width: 0;
+    max-height: none;
 }
 
 .privacy-policy-end {
@@ -65,4 +96,20 @@
 .privacy-policy-logo {
     width: 32px;
     height: 32px;
+}
+
+@media (max-width: 1350px) {
+    .privacy-policy-defending-container {
+        position: relative;
+        right: auto;
+        display: flex;
+        justify-content: center;
+        margin-top: 64px;
+        padding-bottom: 64px;
+    }
+    
+    .privacy-policy-defending {
+        width: 100%;
+        max-width: 400px;
+    }
 }
