minor improvement in header dropdown / added a go back button to privacy policy page / reduced privacy policy illustration's opacity / added foxer current version 'v2.0' in the corner across the app

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -5,3 +5,11 @@
   justify-content: center;
   text-align: center;
 } */
+ .version {
+  position: fixed;
+  right: 32px;
+  bottom: 24px;
+  font-size: 14px;
+  font-weight: 500;
+  color: var(--color-text-secondary);
+}
