--- a/frontend/src/pages/tasks.css
+++ b/frontend/src/pages/tasks.css
@@ -148,9 +148,10 @@
 }
 
 .dots-option.header {
-  height: 34px;
+  /* height: 34px; */
   font-weight: 550;
   letter-spacing: 0.2px;
+  padding: 10px; 
 }
 
 
@@ -172,14 +173,6 @@
   color: #1d9bf0;
 }
 
-.dots-option.tasks {
-  background-color: var(--color-surface-3);
-
-}
-
-.dots-option.tasks:hover {
-  background-color: var(--color-border-2);
-}
 
 .dropdown-section-title {
   font-size: 12px;
@@ -197,7 +190,7 @@
 .dropdown-divider {
   height: 0.5px;
   background-color: var(--color-border);
-  margin: 6px 0;
+  margin: 6px 0 12px 0;
   border-radius: 2px;
 }
 
@@ -205,7 +198,7 @@
   display: flex;
   flex-direction: row;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.18);
-  margin-bottom: 10px;
+  margin-bottom: 14px;
   background: var(--color-surface-3);
 
   border-radius: 20px;
@@ -238,8 +231,9 @@
 .theme-selection-bg {
   position: absolute;
   inset: 0;
+  /* border: 1px solid var(--color-border-3); */
   background: var(--color-border-2);
-  box-shadow: inset 0 2px 2px 0px var(--color-border-3);
+  box-shadow: inset 0 1.5px 2px 0px var(--color-border-3);
   border-radius: 50px;
   z-index: -1;
 }
@@ -967,3 +961,4 @@ margin-top: 0.5px;
   height: 22px;
   color: var(--color-text-primary);
 }
+
