--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -13,3 +13,23 @@
   font-weight: 500;
   color: var(--color-text-secondary);
 }
+
+#wip-tooltip {
+    position: fixed;
+    padding: 4px 9px;
+    font-size: 12px;
+    font-weight: 500;
+    font-family: 'Switzer', sans-serif;
+
+    /* background: var(--color-surface-3); */
+    backdrop-filter: blur(8px);
+    color: var(--color-text-primary);
+    border-radius: 6px;
+    border: 1px solid var(--color-border-2);
+
+    pointer-events: none;
+    opacity: 0 ;
+    transform: translate(-50%, -50%) scale(0.96);
+    transition: opacity 140ms ease, transform 140ms ease;
+    z-index: 999999;
+}
