--- a/frontend/src/pages/tasks.css
+++ b/frontend/src/pages/tasks.css
@@ -474,14 +474,15 @@
   color: var(--color-text-secondary);
 }
 
-.calendar-day.disabled:hover {
-  cursor: not-allowed;
-}
 
 .calendar-day.disabled {
   color: var(--color-surface-3);
   pointer-events: none;
-  cursor: no-drop;
+
+}
+
+.calendar-day.disabled:hover {
+  cursor: not-allowed;
 }
 
 .calendar-day.selected {
@@ -592,6 +593,7 @@
 }
 
 .task-item {
+  max-height: 54px;
   display: flex;
   justify-content: space-between;
   align-items: flex-start;
@@ -601,10 +603,13 @@
   color: var(--color-text-primary);
   border: 0.5px solid var(--color-border);
   box-sizing: border-box;
-  transition: background-color 0.2s ease-in-out, height 0.25s ease-in-out;
-  overflow: visible;
+  transition: background-color 0.2s ease-in-out, max-height 0.3s ease;
   position: relative;
   box-shadow: inset 0 2px 3px rgba(255, 255, 255, 0.025);
+}
+
+.task-item:hover {
+  max-height: 300px;
 }
 
 /* .task-item:hover {
@@ -704,7 +709,7 @@ margin-top: 0.5px;
 }
 
 .task-title {
-  display: flex;
+  display: block;
   font-size: 16px;
   font-weight: 500;
   letter-spacing: 0.1px;
@@ -714,12 +719,16 @@ margin-top: 0.5px;
   text-overflow: ellipsis;
   white-space: nowrap;
   margin-right: 16px;
+  transition: max-width 0s 0.5s, overflow 0s 0.5s, white-space 0s 0.5s, text-overflow 0s 0.5s;
 }
 
 .task-item:hover .task-title {
   max-width: none;
   overflow: visible;
   white-space: normal;
+  word-wrap: break-word;
+  text-overflow: clip;
+  transition: max-width 0s, overflow 0s, white-space 0s, text-overflow 0s;
 }
 
 .task-item-right {
@@ -1030,7 +1039,7 @@ margin-top: 0.5px;
   }
 
   .title {
-    font-size: 20px;
+    font-size: 21px;
   }
 
   .information {
@@ -1048,8 +1057,8 @@ margin-top: 0.5px;
   }
 
   .task-title {
-    font-size: 15px;
-    max-width: 200px;
+    font-size: 14px;
+    max-width: 300px;
   }
 
   .task-date-chip {
@@ -1063,13 +1072,46 @@ margin-top: 0.5px;
   }
 }
 
+@media (max-width: 590px) {
+
+  .task-title {
+    max-width: 250px;
+  }
+
+}
+
+
+@media (max-width: 540px) {
+
+  .task-title {
+    max-width: 180px;
+  }
+
+}
+
+@media (max-width: 470px) {
+
+  .task-title {
+    max-width: 150px;
+  }
+
+}
+
+@media (max-width: 440px) {
+
+  .task-title {
+    max-width: 130px;
+  }
+
+}
+
 @media (max-width: 400px) {
   .tasks-container {
     /* padding: 0 16px !important; */
   }
 
   .task-title {
-    max-width: 140px;
+    max-width: 100px;
   }
 
   .task-date {
@@ -1079,4 +1121,14 @@ margin-top: 0.5px;
   .task-time {
     font-size: 12px;
   }
+}
+
+
+@media (max-width: 380px) {
+
+
+  .task-title {
+    max-width: 70px;
+  }
+
 }
