--- a/frontend/src/pages/tasks.css
+++ b/frontend/src/pages/tasks.css
@@ -916,7 +916,17 @@ margin-top: 0.5px;
   font-size: 14px;
   color: var(--color-text-secondary);
   font-weight: 400;
+  padding: 2px 8px;
+  border-radius: 5px;
+  transition: background 0.2s;
 }
+
+.task-time:hover {
+  cursor: pointer;
+  background: var(--color-surface-3);
+}
+
+
 
 .task-date {
   display: flex;
@@ -927,7 +937,9 @@ margin-top: 0.5px;
   font-weight: 400;
   color: var(--color-success);
   background-color: hsla(165, 82%, 40%, 0.1);
-  transition: all 0.3s ease-in-out;
+  transition:
+    color 0.3s ease-in-out,
+    background-color 0.3s ease-in-out;
   padding: 2px 10px;
   border-radius: 5px;
 }
